Adicionando logo ao site, alterando cores e melhorando visibilidade de certos itens

--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -11,7 +11,7 @@
   <script src="./js/sessao.js"></script>
 
   <link rel="stylesheet" href="./css/estilo.css" />
-  <link rel="icon" href="./assets/icon/favicon2.ico" />
+  <link rel="icon" href="./assets/icon/logo.png" />
   <link rel="preconnect" href="https://fonts.gstatic.com" />
 </head>
 
@@ -19,7 +19,7 @@
   <!--header inicio-->
   <div class="header">
     <div class="container">
-      <h1 class="titulo">AquaTech</h1>
+      <div class="logo"><img src="./assets/imgs/logoTXT.png" alt=""></div>
       <ul class="navbar">
         <li>
           <a href="index.html">Inicial</a>
