Adicionando estilização para tela inicial(index) e navbar, inicio da criação da rota para os planos futuros do casal

--- a/public/login.html
+++ b/public/login.html
@@ -63,7 +63,7 @@
                 </div>
 
                 <div id="div_aguardar" class="loading-div">
-                    <img src="./assets/circle-loading.gif" id="loading-gif">
+                    <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExdTF3M250cnZsOTI0OHJldzllZWd4MDhsc3Z3d3Nldml6aWlxdXRkZyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/dOUf1WoormUPAsAe2H/giphy.gif" id="loading-gif">
                 </div>
 
                 <div id="div_erros_login"></div>
