--- a/public/simulador.html
+++ b/public/simulador.html
@@ -16,67 +16,98 @@
 </head>
 
 <body>
+    <div class="carregamento"><img src="./assets/imgs/logoBatman.gif" alt="Logo carregando"></div>
+    <div class="conteudoPrincipal">
 
-    <!--header inicio-->
-    <div class="header">
-        <div class="container">
-            <h1 class="titulo">AquaTech</h1>
-            <ul class="navbar">
-                <li>
-                    <a href="./index.html">Inicial</a>
-                </li>
-                <li class="agora">Simulador</li>
-                <li>|</li>
-                <li>
-                    <a href="./login.html">Login</a>
-                </li>
-                <li>
-                    <a href="./login.html">Cadastro</a>
-                </li>
-            </ul>
+        <!--header inicio-->
+        <div class="header">
+            <div class="container">
+                <h1 class="logo"><img src="./assets/imgs/logoBatman.gif" alt=""></h1>
+                <ul class="navbar">
+                    <li>
+                        <a href="./index.html">Inicial</a>
+                    </li>
+                    <li class="agora">Simulador</li>
+                    <li>|</li>
+                    <li>
+                        <a href="./login.html">Login</a>
+                    </li>
+                    <li>
+                        <a href="./login.html">Cadastro</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
 
 
-    <!-- simulador inicio -->
-    <div class="simulador">
-        <div class="container">
-            <h2>Simulador</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium tempora architecto sint fugit
-                dolorum? Ipsum laborum magnam similique labore, voluptate amet reprehenderit rem ab blanditiis quisquam
-                laboriosam eaque alias. Reiciendis. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Accusantium tempora architecto sint fugit dolorum? Ipsum laborum magnam similique labore, voluptate amet
-                reprehenderit rem ab blanditiis quisquam laboriosam eaque alias. Reiciendis.</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium tempora architecto sint fugit
-                dolorum? Ipsum laborum magnam similique labore, voluptate amet reprehenderit rem ab blanditiis quisquam
-                laboriosam eaque alias. Reiciendis. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Accusantium tempora architecto sint fugit dolorum? Ipsum laborum magnam similique labore, voluptate amet
-                reprehenderit rem ab blanditiis quisquam laboriosam eaque alias. Reiciendis.</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium tempora architecto sint fugit
-                dolorum? Ipsum laborum magnam similique labore, voluptate amet reprehenderit rem ab blanditiis quisquam
-                laboriosam eaque alias. Reiciendis. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Accusantium tempora architecto sint fugit dolorum? Ipsum laborum magnam similique labore, voluptate amet
-                reprehenderit rem ab blanditiis quisquam laboriosam eaque alias. Reiciendis.</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium tempora architecto sint fugit
-                dolorum? Ipsum laborum magnam similique labore, voluptate amet reprehenderit rem ab blanditiis quisquam
-                laboriosam eaque alias. Reiciendis. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Accusantium tempora architecto sint fugit dolorum? Ipsum laborum magnam similique labore, voluptate amet
-                reprehenderit rem ab blanditiis quisquam laboriosam eaque alias. Reiciendis.</p>
+        <!-- simulador inicio -->
+        <div class="simulador">
+            <div class="container">
+                <h2>Simulador</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium tempora architecto sint fugit
+                    dolorum? Ipsum laborum magnam similique labore, voluptate amet reprehenderit rem ab blanditiis
+                    quisquam
+                    laboriosam eaque alias. Reiciendis. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Accusantium tempora architecto sint fugit dolorum? Ipsum laborum magnam similique labore, voluptate
+                    amet
+                    reprehenderit rem ab blanditiis quisquam laboriosam eaque alias. Reiciendis.</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium tempora architecto sint fugit
+                    dolorum? Ipsum laborum magnam similique labore, voluptate amet reprehenderit rem ab blanditiis
+                    quisquam
+                    laboriosam eaque alias. Reiciendis. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Accusantium tempora architecto sint fugit dolorum? Ipsum laborum magnam similique labore, voluptate
+                    amet
+                    reprehenderit rem ab blanditiis quisquam laboriosam eaque alias. Reiciendis.</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium tempora architecto sint fugit
+                    dolorum? Ipsum laborum magnam similique labore, voluptate amet reprehenderit rem ab blanditiis
+                    quisquam
+                    laboriosam eaque alias. Reiciendis. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Accusantium tempora architecto sint fugit dolorum? Ipsum laborum magnam similique labore, voluptate
+                    amet
+                    reprehenderit rem ab blanditiis quisquam laboriosam eaque alias. Reiciendis.</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium tempora architecto sint fugit
+                    dolorum? Ipsum laborum magnam similique labore, voluptate amet reprehenderit rem ab blanditiis
+                    quisquam
+                    laboriosam eaque alias. Reiciendis. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Accusantium tempora architecto sint fugit dolorum? Ipsum laborum magnam similique labore, voluptate
+                    amet
+                    reprehenderit rem ab blanditiis quisquam laboriosam eaque alias. Reiciendis.</p>
 
+            </div>
         </div>
-    </div>
-    <!-- simulador fim -->
+        <!-- simulador fim -->
 
-    <!--footer inicio-->
-    <div class="footer">
-        <div class="container">
-            <h4>Feito com amor por aluno &hearts; SPTech &copy; 2023</h4>
-            <span class="version">v1.0.0</span>
+        <!--footer inicio-->
+        <div class="footer">
+            <div class="container">
+                <h4>Feito com amor por aluno &hearts; SPTech &copy; 2023</h4>
+                <span class="version">v1.0.0</span>
+            </div>
         </div>
+        <!--footer fim-->
+
     </div>
-    <!--footer fim-->
-
-
 </body>
 
 </html>
+<script>
+
+  // Função para ocultar o carregamento e mostrar o conteúdo principal
+  function carregamentoInicial() {
+    const carregamento = document.getElementById('carregamento');
+    const conteudoPrincipal = document.getElementById('conteudoPrincipal');
+
+    conteudoPrincipal.style.display = 'block';
+
+    carregamento.classList.add('sumir');
+
+    setTimeout(() => {
+        carregamento.style.display = 'none';
+        conteudoPrincipal.classList.add('aparecer');
+    }, 1000); // 1 segundos de atraso
+  }
+
+  // Chama a função após um pequeno atraso (2 segundos)
+  setTimeout(carregamentoInicial, 1500);
+
+</script>
