--- a/public/login.html
+++ b/public/login.html
@@ -16,76 +16,97 @@
 </head>
 
 <body>
+    <div class="carregamento" id="carregamento"><img src="./assets/imgs/logoBatman.gif" alt="Logo carregando"></div>
+    <div class="conteudoPrincipal" id="conteudoPrincipal">
 
-    <!--Header-->
-
-    <div class="header">
-        <div class="container">
-            <div class="logo"><img src="./assets/imgs/logoTXT.png" alt=""></div>
-            <ul class="navbar">
-                <li>
-                    <a href="index.html">Inicial</a>
-                </li>
-                <li>
-                    <a href="simulador.html">Simulador</a>
-                </li>
-                <li>|</li>
-                <li class="agora">
-                    <a href="#">Login</a>
-                </li>
-                <li>
-                    <a href="cadastro.html">Cadastro</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-
-
-    <div class="login">
-        <div class="alerta_erro">
-            <div class="card_erro" id="cardErro">
-                <span id="mensagem_erro"></span>
+        <!--Header-->
+        <div class="header">
+            <div class="container">
+                <div class="logo"><img src="./assets/imgs/logoBatman.gif" alt=""></div>
+                <ul class="navbar">
+                    <li>
+                        <a href="index.html">Inicial</a>
+                    </li>
+                    <li>
+                        <a href="simulador.html">Simulador</a>
+                    </li>
+                    <li>|</li>
+                    <li class="agora">
+                        <a href="#">Login</a>
+                    </li>
+                    <li>
+                        <a href="cadastro.html">Cadastro</a>
+                    </li>
+                </ul>
             </div>
         </div>
-        <div class="container">
-            <div class="card card-login">
-                <h2>Olá de volta!</h2>
-                <div class="formulario">
-                    <div class="campo">
-                        <span>E-mail:</span>
-                        <input id="email_input" type="text" placeholder="Login">
-                    </div>
-                    <div class="campo">
-                        <span>Senha:</span>
-                        <input id="senha_input" type="password" placeholder="******">
-                    </div>
-                    <button class="botao" onclick="entrar()">Entrar</button>
-                </div>
 
-                <div id="div_aguardar" class="loading-div">
-                    <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExdTF3M250cnZsOTI0OHJldzllZWd4MDhsc3Z3d3Nldml6aWlxdXRkZyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/dOUf1WoormUPAsAe2H/giphy.gif" id="loading-gif">
-                </div>
 
-                <div id="div_erros_login"></div>
+        <div class="login">
+            <div class="alerta_erro">
+                <div class="card_erro" id="cardErro">
+                    <span id="mensagem_erro"></span>
+                </div>
+            </div>
+            <div class="container">
+                <div class="card card-login">
+                    <div class="titulo_formulario">
+                        <h2>BatLogin!</h2>
+                    </div>
+                    <div class="formulario">
+                        <div class="campo">
+                            <span>E-mail:</span>
+                            <input id="email_input" type="text" placeholder="Login">
+                        </div>
+                        <div class="campo">
+                            <span>Senha:</span>
+                            <input id="senha_input" type="password" placeholder="******">
+                        </div>
+                        <button class="botao" onclick="entrar()">Entrar</button>
+                    </div>
+
+                    <div id="div_aguardar" class="loading-div">
+                        <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExdTF3M250cnZsOTI0OHJldzllZWd4MDhsc3Z3d3Nldml6aWlxdXRkZyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/dOUf1WoormUPAsAe2H/giphy.gif"
+                            id="loading-gif">
+                    </div>
+
+                    <div id="div_erros_login"></div>
+                </div>
             </div>
         </div>
-    </div>
 
-    <!--footer inicio-->
-    <div class="footer">
-        <div class="container">
-            <h4>Feito com amor por aluno &hearts; SPTech &copy; 2023</h4>
-            <span class="version">v1.0.0</span>
+        <!--footer inicio-->
+        <div class="footer">
+            <div class="container">
+                <h4>Feito com amor por aluno &hearts; SPTech &copy; 2023</h4>
+                <span class="version">v1.0.0</span>
+            </div>
         </div>
+        <!--footer fim-->
     </div>
-    <!--footer fim-->
-
 </body>
 
 </html>
 
 <script>
 
+    // Função para ocultar o carregamento e mostrar o conteúdo principal
+    function carregamentoInicial() {
+        const carregamento = document.getElementById('carregamento');
+        const conteudoPrincipal = document.getElementById('conteudoPrincipal');
+
+        conteudoPrincipal.style.display = 'block';
+
+        carregamento.classList.add('sumir');
+
+        setTimeout(() => {
+            carregamento.style.display = 'none';
+            conteudoPrincipal.classList.add('aparecer');
+        }, 1000); // 1 segundos de atraso
+    }
+
+    // Chama a função após um pequeno atraso (2 segundos)
+    setTimeout(carregamentoInicial, 1500);
 
     function entrar() {
         aguardar();
