--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
   <div class="conteudoPrincipal" id="conteudoPrincipal">
     <div class="header">
       <div class="container">
-        <div class="logo"><img src="assets/imgs/logoBatman.gif" alt=""></div>
+        <div class="logo"><img src="assets/imgs/logoBatSite.png" alt=""></div>
         <ul class="navbar">
           <li class="agora">
             <a href="#">Inicial</a>
@@ -50,10 +50,15 @@
     <div class="social">
       <div class="container">
         <div class="subtitulo">
-          <span>História</span>
+          <span>Vamos conhecer o filme!</span>
         </div>
-        <div class="texto">
-          <p>O AmorDB é um banco de dados que armazena suas memórias mais queridas, com segurança e carinho.</p>
+        <div class="corpo">
+          <div class="imagem">
+            <img src="./assets/imgs/historiaIMG.gif">
+          </div>
+          <div class="texto">
+            <p>"The Batman" acompanha Bruce Wayne (Robert Pattinson) em seu segundo ano como o Homem-Morcego, aterrorizando criminosos em Gotham. Com apenas Alfred e o detetive Gordon como aliados, ele investiga uma série de crimes enigmáticos deixados pelo Charada. A trama revela uma rede de corrupção ligada à família Wayne, colocando em dúvida o legado de seu pai, Thomas. Batman precisa formar novas alianças para expor a verdade e combater a corrupção que domina a cidade.</p>
+          </div>
         </div>
       </div>
     </div>
