--- a/public/login.html
+++ b/public/login.html
@@ -22,7 +22,7 @@
         <!--Header-->
         <div class="header">
             <div class="container">
-                <div class="logo"><img src="./assets/imgs/logoBatman.gif" alt=""></div>
+                <div class="logo"><img src="./assets/imgs/logoBatSite.png" alt=""></div>
                 <ul class="navbar">
                     <li>
                         <a href="index.html">Inicial</a>
@@ -72,6 +72,9 @@
 
                     <div id="div_erros_login"></div>
                 </div>
+            </div>
+            <div class="img_lateral">
+                <img src="./assets/imgs/loginIMG.jpg" alt="Imagem do batman">
             </div>
         </div>
 
