--- a/public/simulador.html
+++ b/public/simulador.html
@@ -22,7 +22,7 @@
         <!--header inicio-->
         <div class="header">
             <div class="container">
-                <h1 class="logo"><img src="./assets/imgs/logoBatman.gif" alt=""></h1>
+                <h1 class="logo"><img src="./assets/imgs/logoBatSite.png" alt=""></h1>
                 <ul class="navbar">
                     <li>
                         <a href="./index.html">Inicial</a>
