--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <script src="./js/sessao.js"></script>
 
   <link rel="stylesheet" href="./css/estilo.css">
-  <link rel="icon" href="./assets/icon/logo.png">
+  <link rel="icon" href="./assets/imgs/logoBatSite.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
 
@@ -27,7 +27,7 @@
             <a href="#">Inicial</a>
           </li>
           <li>
-            <a href="simulador.html">Simulador</a>
+            <a href="simulador.html">?</a>
           </li>
           <li>|</li>
           <li>
