--- a/public/login.html
+++ b/public/login.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>AmorDB | Login</title>
+    <title>BatSite | Login</title>
 
     <script src="./js/sessao.js"></script>
 
@@ -28,7 +28,7 @@
                         <a href="index.html">Inicial</a>
                     </li>
                     <li>
-                        <a href="simulador.html">Simulador</a>
+                        <a href="simulador.html">❔</a>
                     </li>
                     <li>|</li>
                     <li class="agora">
