Organizando pastas css e html, iniciando estilização da tela de charadas

--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -6,11 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>AquaTech | Cadastro</title>
+  <title>BatSite | Cadastro</title>
 
   <script src="./js/sessao.js"></script>
 
-  <link rel="stylesheet" href="./css/estilo.css" />
+  <link rel="stylesheet" href="./css/cadastro.css" />
   <link rel="icon" href="./assets/icon/logo.png" />
   <link rel="preconnect" href="https://fonts.gstatic.com" />
 </head>
@@ -26,8 +26,8 @@
           <li>
             <a href="index.html">Inicial</a>
           </li>
-          <li>
-            <a href="simulador.html">Simulador</a>
+          <li class="interrogacao">
+            <a href="simulador.html">?</a>
           </li>
           <li>|</li>
           <li>
@@ -41,7 +41,7 @@
     </div>
     <!--header fim-->
 
-    <div class="login">
+    <div class="cadastro">
       <div class="alerta_erro">
         <div class="card_erro" id="cardErro">
           <span id="mensagem_erro"></span>
@@ -81,7 +81,7 @@
             <img src="./assets/circle-loading.gif" id="loading-gif" />
           </div>
 
-          <div id="div_erros_login"></div>
+          <div id="div_erros_cadastro"></div>
         </div>
       </div>
       <div class="img_lateral">
