--- a/public/login.html
+++ b/public/login.html
@@ -10,7 +10,7 @@
 
     <script src="./js/sessao.js"></script>
 
-    <link rel="stylesheet" href="./css/estilo.css">
+    <link rel="stylesheet" href="./css/login.css">
     <link rel="icon" href="./assets/icon/logo.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
@@ -27,9 +27,11 @@
                     <li>
                         <a href="index.html">Inicial</a>
                     </li>
-                    <li>
-                        <a href="simulador.html">❔</a>
-                    </li>
+                    <div class="interrogacao">
+                        <li>
+                            <a href="simulador.html">?</a>
+                        </li>
+                    </div>
                     <li>|</li>
                     <li class="agora">
                         <a href="#">Login</a>
