--- a/public/simulador.html
+++ b/public/simulador.html
@@ -10,14 +10,14 @@
 
     <script src="./js/sessao.js"></script>
 
-    <link rel="stylesheet" href="./css/estilo.css">
+    <link rel="stylesheet" href="./css/charada.css">
     <link rel="icon" href="./assets/icon/favicon2.ico">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
 
 <body>
-    <div class="carregamento"><img src="./assets/imgs/logoBatman.gif" alt="Logo carregando"></div>
-    <div class="conteudoPrincipal">
+    <div class="carregamento" id="carregamento"><img src="./assets/imgs/charadaIMG.gif" alt="Logo carregando"></div>
+    <div class="conteudoPrincipal" id="conteudoPrincipal">
 
         <!--header inicio-->
         <div class="header">
@@ -27,13 +27,15 @@
                     <li>
                         <a href="./index.html">Inicial</a>
                     </li>
-                    <li class="agora">Simulador</li>
+                    <div class="interrogacao">
+                        <li class="agora">?</li>
+                    </div>
                     <li>|</li>
                     <li>
                         <a href="./login.html">Login</a>
                     </li>
                     <li>
-                        <a href="./login.html">Cadastro</a>
+                        <a href="./cadastro.html">Cadastro</a>
                     </li>
                 </ul>
             </div>
@@ -41,37 +43,8 @@
 
 
         <!-- simulador inicio -->
-        <div class="simulador">
+        <div class="charada">
             <div class="container">
-                <h2>Simulador</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium tempora architecto sint fugit
-                    dolorum? Ipsum laborum magnam similique labore, voluptate amet reprehenderit rem ab blanditiis
-                    quisquam
-                    laboriosam eaque alias. Reiciendis. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Accusantium tempora architecto sint fugit dolorum? Ipsum laborum magnam similique labore, voluptate
-                    amet
-                    reprehenderit rem ab blanditiis quisquam laboriosam eaque alias. Reiciendis.</p>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium tempora architecto sint fugit
-                    dolorum? Ipsum laborum magnam similique labore, voluptate amet reprehenderit rem ab blanditiis
-                    quisquam
-                    laboriosam eaque alias. Reiciendis. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Accusantium tempora architecto sint fugit dolorum? Ipsum laborum magnam similique labore, voluptate
-                    amet
-                    reprehenderit rem ab blanditiis quisquam laboriosam eaque alias. Reiciendis.</p>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium tempora architecto sint fugit
-                    dolorum? Ipsum laborum magnam similique labore, voluptate amet reprehenderit rem ab blanditiis
-                    quisquam
-                    laboriosam eaque alias. Reiciendis. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Accusantium tempora architecto sint fugit dolorum? Ipsum laborum magnam similique labore, voluptate
-                    amet
-                    reprehenderit rem ab blanditiis quisquam laboriosam eaque alias. Reiciendis.</p>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium tempora architecto sint fugit
-                    dolorum? Ipsum laborum magnam similique labore, voluptate amet reprehenderit rem ab blanditiis
-                    quisquam
-                    laboriosam eaque alias. Reiciendis. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Accusantium tempora architecto sint fugit dolorum? Ipsum laborum magnam similique labore, voluptate
-                    amet
-                    reprehenderit rem ab blanditiis quisquam laboriosam eaque alias. Reiciendis.</p>
 
             </div>
         </div>
