--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
   <script src="./js/sessao.js"></script>
 
-  <link rel="stylesheet" href="./css/estilo.css">
+  <link rel="stylesheet" href="./css/index.css">
   <link rel="icon" href="./assets/imgs/logoBatSite.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
@@ -26,7 +26,7 @@
           <li class="agora">
             <a href="#">Inicial</a>
           </li>
-          <li>
+          <li class="interrogacao">
             <a href="simulador.html">?</a>
           </li>
           <li>|</li>
