Organização de pastas

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
             <a href="#">Inicial</a>
           </li>
           <li class="interrogacao">
-            <a href="simulador.html">?</a>
+            <a href="charada.html">?</a>
           </li>
           <li>|</li>
           <li>
