--- a/public/login.html
+++ b/public/login.html
@@ -29,7 +29,7 @@
                     </li>
                     <div class="interrogacao">
                         <li>
-                            <a href="simulador.html">?</a>
+                            <a href="charada.html">?</a>
                         </li>
                     </div>
                     <li>|</li>
