--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -27,7 +27,7 @@
             <a href="index.html">Inicial</a>
           </li>
           <li class="interrogacao">
-            <a href="simulador.html">?</a>
+            <a href="charada.html">?</a>
           </li>
           <li>|</li>
           <li>
