--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
 
     <div class="footer">
       <div class="container">
-        <h4>Feito com amor por aluno &hearts; SPTech &copy; 2023</h4>
+        <div class="logo_footer"><img src="./assets/imgs/logoBatSite.png"></div>
       </div>
     </div>
   </div>
