--- a/public/login.html
+++ b/public/login.html
@@ -83,8 +83,7 @@
         <!--footer inicio-->
         <div class="footer">
             <div class="container">
-                <h4>Feito com amor por aluno &hearts; SPTech &copy; 2023</h4>
-                <span class="version">v1.0.0</span>
+                <div class="logo_footer"><img src="./assets/imgs/logoBatSite.png"></div>
             </div>
         </div>
         <!--footer fim-->
