--- a/public/index.html
+++ b/public/index.html
@@ -40,14 +40,14 @@
       </div>
     </div>
 
-    <div class="banner">
+    <div class="conteudoInicial">
       <div class="container">
         <img src="assets/imgs/batman.gif" alt="Imagem do batman">
         <p>"Eles pensam que estou escondido nas <span>sombras,</span> porém eu sou as <span>sombras...</span>"</p>
       </div>
     </div>
 
-    <div class="social">
+    <div class="conteudoFilme">
       <div class="container">
         <div class="subtitulo">
           <span>Vamos conhecer o filme!</span>
@@ -89,7 +89,7 @@
     }, 1000); // 1 segundos de atraso
   }
 
-  // Chama a função após um pequeno atraso (2 segundos)
+  // Chama a função após um pequeno atraso (1.5 segundos)
   setTimeout(carregamentoInicial, 1500);
 
 </script>
