--- a/public/login.html
+++ b/public/login.html
@@ -53,12 +53,12 @@
             <div class="container">
                 <div class="card card-login">
                     <div class="titulo_formulario">
-                        <h2>BatLogin!</h2>
+                        <h2>BatLogin</h2>
                     </div>
                     <div class="formulario">
                         <div class="campo">
-                            <span>E-mail:</span>
-                            <input id="email_input" type="text" placeholder="Login">
+                            <span>Usuário:</span>
+                            <input id="email_input" type="text" placeholder="Digite o seu nome de usuário">
                         </div>
                         <div class="campo">
                             <span>Senha:</span>
